--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-native": "^0.23.0"
   },
   "devDependencies": {
+    "proj4": "^2.3.14",
     "react-native-drawer": "^2.0.0-wip1",
     "react-native-maps": "^0.3.1"
   }
